add header block elements

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
     <title>My first webpage!</title>
   </head>
   <body>
+    <h1>My first webpage</h1>
+    <h2>Written woth a little guidance from Hola Code</h2>
+
     <p>Hello, world!</p>
     <p>Welcome to my first  webpage!</p>
   </body>
