--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -5,10 +5,10 @@
   </head>
   <body>
     <h1>My first webpage</h1>
-    <h2>Written woth a little guidance from Hola Code</h2>
+    <h2>Written woth a little guidance from <em> Hola Code</em></h2>
 
     <p>Hello, world!</p>
-    <p>Welcome to my first  webpage!</p>
+    <p>Welcome to my <strong>first  webpage</strong>!</p>
 
     <p>Here are some things I´m going to learn about coding:</p>
     <ul>
@@ -17,5 +17,7 @@
       <li>JavaScript</li>
       <li>and alot more!</li>
     </ul>
+    <p>Check Out <a href="http://www.conovo.org/holacode/">Hola Code</a>. It´s a great place to learn web develovment skills!</p>
+    <img src="elefante2.jpeg" alt="a photo of an elefante">
   </body>
 </html>
